------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Thu Nov 18 15:00 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Some more updates to config scripts made in conjunction with
	  Riley Williams.

Thu Nov 18 14:31 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed typo in hdisk reporting.

Wed Nov 18 19:16 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Integrated updated and re-organised config scripts contributed
	  by Riley Williams.

Tue Nov 17 19:16 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Improved serial driver and added support for serial console.

Mon Nov 16 17:48 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Cosmetic fix to bitops.c pointed out by Riley Williams.

Mon Nov 16 16:31 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Latest version of Blaz Antonics lp driver added.

Wed Nov 11 15:32 GMT 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Latest version of Blaz Antonics directhd driver added.

	* Fixed bioscon driver as contributed by David Murn - now
	  works correctly.

	* Minor tweaks to nearby code.

Tue Nov  3 12:44 CET 1998   Simon Weijgers  <simon@mbit.doa.org>
	
	* Fixed a little parse error pointed out by Al Sutton
	  <al.sutton@chase.com>.

Thu Oct 22 17:46 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Some fixes to serial driver - now interrupts seem to work.

	* Final tweeks before 0.0.73.

Wed Oct 21 12:26 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* More register variable optimisation. Should now be complete.

	* Fixed some small bugs introduced in previous optimisation.

	* Discovered big bug in the minix truncate code - see BUGS.

Thu Oct 13 20:20 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
